# birdsong-seq-autoencoder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INITIAL.md  LICENSE  README.md  pyproject.toml  run_CLI.py  task_board.md
.cursor/commands/: execute-prp.mdc  generate-prp.mdc
.cursor/rules/: data_pipeline.mdc  model_conventions.mdc  project_overview.mdc  testing.mdc
PRPs/: birdsong_package_refactor.md
configs/: base.yaml  example_dataset_large_batch.yaml
configs/templates/: data_generation.yaml  evaluation_only.yaml  full_experiment.yaml  quick_test.yaml  training_only.yaml
docs/: architecture.md  motivation.md
examples/: latent_analysis_example.py
examples/example code/data generation/: Birdsong_Data_Aggregation.py  birdsong_data_generation.py
examples/example code/evaluation and plotting/: birdsong_evaluation_3.py
examples/example code/neural netowrk model/: birdsong_data_loader.py  birdsong_lfads_model_2.py  birdsong_loss.py  birdsong_training_2.py
src/birdsong/: __init__.py
src/birdsong/analysis/: __init__.py  latent.py
src/birdsong/cli/: __init__.py  analyze.py  base.py  eval.py  eval_enhanced.py  experiment.py  generate.py  train.py  train_enhanced.py
src/birdsong/config/: __init__.py  loader.py  schema.py  validation.py
src/birdsong/data/: __init__.py  aggregation.py  generation.py  loader.py
src/birdsong/evaluation/: __init__.py  evaluate.py
src/birdsong/experiments/: __init__.py  runner.py
src/birdsong/models/: __init__.py  lfads.py  loss.py
src/birdsong/training/: __init__.py  trainer.py
src/birdsong/utils/: __init__.py  reproducibility.py
tests/: README.md  test_cli_seed_tracking.py  test_config.py  test_config_integration.py  test_latent_analysis.py  test_regression.py  test_reproducibility.py
tests/gpu/: simple_gpu_test.py  test_gpu_usage.py
tests/integration/: simple_test.py  test_eval.py  test_fixes.py  test_resume.py
tests/performance/: simple_performance_test.py  test_performance.py
